--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,7 @@ version: 1.0.{build}
 image: Visual Studio 2015
 configuration: Debug
 platform: x86
-build_script:
-    # скрипт сборки проекта:
-    - make
+before_build: 
+  - nuget restore
+build:
+  verbosity: minimal
