--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: c++
+os: windows
 
-dist: xenial
+language: c++
 
 script:
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
