--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ os: windows
 language: cpp
 
 script:
+  - choco install chocolatey
+  - choco install make
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - make
 compiler:
