--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ script:
   - choco install make
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - make
+  - make test
+  - bin/test
 compiler:
   - g++
+  - gcc
